# L2Toolbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-ci.yml
l2toolbox-core/: Cargo.toml  LICENSE  README.md
l2toolbox-gui/: Cargo.toml  README.md
l2toolbox-gui/Languages/: en-GB.ftl  pl-PL.ftl  xx-INVALID.ftl  xx-TEST.ftl
l2toolbox-gui/src/: app.rs  config.rs  main.rs
l2toolbox-gui/src/states/: main_app.rs  mod.rs  new_profile_setup.rs  profile_selection.rs  translation_selection.rs
l2toolbox-gui/src/translations/: mod.rs
